--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "start": "echo 'Static project, open index.html'"
   }
 }
